Closed Bug 386730 Opened 19 years ago Closed 19 years ago

After reloading a page with a single contenteditable element, every element on that page is editable

Categories

(Core :: DOM: Editor, defect)

x86
Windows Vista
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: albert.brand, Assigned: peterv)

References

()

Details

(Keywords: testcase)

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a7pre) Gecko/2007070304 Minefield/3.0a7pre Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a7pre) Gecko/2007070304 Minefield/3.0a7pre See the testcase URL (from bug #237964). Open the URL, and press reload. Click on a text outside the contenteditable area. Start typing: the text you just typed is appended. Deleting, pasting is also possible. Notice that the caret doesn't appear outside the contenteditable area. Reproducible: Always Expected Results: Text that isn't set as contenteditable should never be editable, even after a reload.
Also noted: after a page reload, disabling contenteditable through the testcase button doesn't work, which may be closely tied to this bug.
Status: UNCONFIRMED → NEW
Component: General → Editor
Ever confirmed: true
Keywords: testcase
Product: Firefox → Core
QA Contact: general → editor
Version: unspecified → Trunk
Attached patch v1 (obsolete) — Splinter Review
Assignee: nobody → peterv
Status: NEW → ASSIGNED
Comment on attachment 270886 [details] [diff] [review] v1 aMakeWholeDocumentEditable should apply to subsequent loads in the same editor.
Attachment #270886 - Flags: superreview?(jst)
Attachment #270886 - Flags: review?(jst)
Attached patch v1.1Splinter Review
Hmm, aMakeWholeDocumentEditable should apply to subsequent loads in the same editor and we shouldn't touch the editable flag on the document on teardown if we didn't touch it when setting up the editor.
Attachment #270886 - Attachment is obsolete: true
Attachment #270903 - Flags: superreview?(jst)
Attachment #270903 - Flags: review?(jst)
Attachment #270886 - Flags: superreview?(jst)
Attachment #270886 - Flags: review?(jst)
Attachment #270903 - Flags: superreview?(jst)
Attachment #270903 - Flags: superreview+
Attachment #270903 - Flags: review?(jst)
Attachment #270903 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: