Fix for bug 386730 (After reloading a page with a single contenteditable element, every element on that page is editable). r/sr=jst.